--- a/booking.html
+++ b/booking.html
@@ -25,15 +25,11 @@
             <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
             <a href="booking.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Booking</a>
             <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Proposal</a>
-            <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i
-                    class="fa fa-search"></i></a>
         </div>
     </div>
 
     <!-- Navbar on small screens -->
     <div id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-        <a href="#upcomingPerformances" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Upcoming
-            Performances</a>
         <a href="booking.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Booking</a>
         <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Proposal</a>
     </div>
@@ -41,15 +37,15 @@
     <!-- Image -->
     <div class="w3-content" style="max-width:2000px;margin-top:46px">
         <div class="w3-display-container w3-center">
-            <img id="banner" src="img/cover-photo.png" style="width: 100%;" alt="Minidoka 2017">
+            <img src="img/cover-photo.png" style="width: 100%;" alt="Minidoka 2017">
         </div>
     </div>
 
     <!-- Page Content -->
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
         <h2 class="w3-wide">Book a Performance</h2>
-        <p class="w3-justify">
-            We perform all over the Puget Sound area. Book us for your next event using this form!
+        <p class="w3-justify w3-center">
+            If you would like us to perform for your event, please fill out this form!
         </p>
         <!-- Booking Form -->
         <section class="booking-form">
@@ -87,7 +83,7 @@
         <a class="fa fa-facebook-official w3-hover-opacity" href="https://www.facebook.com/uwtaikokai/"></a>
         <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/taikokai/"></a>
         <a class="fa fa-youtube w3-hover-opacity" href="https://www.youtube.com/channel/UCfNit59pCLMfxQzRrVRrXTQ"></a>
-        <p>&copy; Dorothy Lu & Aaron Zhao</p>
+        <p class="byline">&copy; Dorothy Lu & Aaron Zhao</p>
         </p>
     </footer>
 </body>
