--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
                 href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
                     class="fa fa-bars"></i></a>
+            <!-- <a href="index.html" class="w3-bar-item w3-button w3-padding-large"><img src="img/icon-dark-gold.png" class="homeLogo"></a> -->
             <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
             <a href="booking.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Booking</a>
             <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Proposal</a>
@@ -29,8 +30,6 @@
 
     <!-- Navbar on small screens -->
     <div id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-        <a href="#upcomingPerformances" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Upcoming
-            Performances</a>
         <a href="booking.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Booking</a>
         <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Proposal</a>
     </div>
@@ -46,7 +45,7 @@
                 <!-- <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off"><a
                             href="">LEARN MORE</a></button></h6> -->
                 <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-margin-top w3-hover-opacity-off"><a
-                            href="#upcomingPerformances">MORE UPCOMING</a></button></h6>
+                            href="#upcomingPerformances">MORE UPCOMING EVENTS</a></button></h6>
             </div>
         </div>
 
@@ -77,7 +76,8 @@
                             class="w3-hover-opacity">
                         <div class="w3-container w3-white w3-center">
                             <p><b>NSU Day Of Rememberance</b></p>
-                            <p class="w3-opacity">Feburary 20 6-8PM</p>
+                            <p>UW Intellectual House</p>
+                            <p class="w3-opacity">Feburary 20 6-8 PM</p>
                             <button class="w3-button w3-black w3-margin-bottom">Learn More</button>
                         </div>
                     </div>
@@ -86,7 +86,8 @@
                             style="width:100%" class="w3-hover-opacity">
                         <div class="w3-container w3-white w3-center">
                             <p><b>TOSA Carnival</b></p>
-                            <p class="w3-opacity">Feburary 22nd 3-8PM</p>
+                            <p>UW HUB Ballroom</p>
+                            <p class="w3-opacity">Feburary 22nd 3-8 PM</p>
                             <button class="w3-button w3-black w3-margin-bottom">Learn More</button>
                         </div>
                     </div>
@@ -94,6 +95,7 @@
                         <img src="img/sakuracon2020.jpg" alt="Sakuracon" style="width:100%" class="w3-hover-opacity">
                         <div class="w3-container w3-white w3-center">
                             <p><b>Sakura-Con</b></p>
+                            <p>Washington State Convention Center</p>
                             <p class="w3-opacity">April 11th 10-11 AM</p>
                             <button class="w3-button w3-black w3-margin-bottom">Learn More</button>
                         </div>
