--- a/after_booking.html
+++ b/after_booking.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="js/index.js"></script>
-    <title>Performance Booking</title>
+    <title>Thank You!</title>
 </head>
 
 <body>
@@ -43,24 +43,11 @@
 
     <!-- Page Content -->
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
-        <h2 class="w3-wide">Book a Performance</h2>
+        <h2 class="w3-wide">Thank you for your booking!</h2>
         <p class="w3-justify w3-center">
-            If you would like us to perform for your event, please fill out this form!
+            We greatly appreciate your interest in letting us to perform for you. We will get back to you soon.
+            Meanwhile, feel free to follow us on our social media!
         </p>
-        <!-- Booking Form -->
-        <section class="booking-form">
-            <form action="/after_booking.html">
-                <label for="name" class="w3-left">Name</label>
-                <input type="text" id="name" name="name" placeholder="Name">
-                <label for="Email" class="w3-left">Email</label>
-                <input type="email" id="email" name="email" placeholder="Email">
-                <label for="date" class="w3-left">Date</label>
-                <input type="date" id="date" name="date" placeholder="Event Date">
-                <label for="message" class="w3-left">Addutional Message</label>
-                <textarea id="message" name="message" placeholder="message"></textarea>
-                <input type="submit" value="Submit">
-            </form>
-        </section>
     </div>
 
 
