--- a/booking.html
+++ b/booking.html
@@ -50,14 +50,16 @@
         <!-- Booking Form -->
         <section class="booking-form">
             <form action="/after_booking.html">
-                <label for="name" class="w3-left">Name</label>
+                <label for="name" class="w3-left">Name/Organization</label>
                 <input type="text" id="name" name="name" placeholder="Name">
-                <label for="Email" class="w3-left">Email</label>
+                <label for="event" class="w3-left">Name of Event</label>
+                <input type="text" id="eventName" name="eventName" placeholder="Event Name">
+                <label for="email" class="w3-left">Email</label>
                 <input type="email" id="email" name="email" placeholder="Email">
-                <label for="date" class="w3-left">Date</label>
+                <label for="date" class="w3-left">Date Of Performance</label>
                 <input type="date" id="date" name="date" placeholder="Event Date">
-                <label for="message" class="w3-left">Addutional Message</label>
-                <textarea id="message" name="message" placeholder="message"></textarea>
+                <label for="message" class="w3-left">Additional Message</label>
+                <textarea id="message" name="message" placeholder="Message"></textarea>
                 <input type="submit" value="Submit">
             </form>
         </section>
