fixed path error in booking

--- a/booking.html
+++ b/booking.html
@@ -49,7 +49,7 @@
         </p>
         <!-- Booking Form -->
         <section class="booking-form">
-            <form action="/after_booking.html">
+            <form action="after_booking.html">
                 <label for="name" class="w3-left">Name/Organization</label>
                 <input type="text" id="name" name="name" placeholder="Name">
                 <label for="event" class="w3-left">Name of Event</label>
