--- a/after_booking.html
+++ b/after_booking.html
@@ -17,21 +17,24 @@
 <body>
 
     <!-- Navbar -->
-    <div class="w3-top">
+    <nav class="w3-top">
         <div class="w3-bar w3-black w3-card">
             <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
                 href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
                     class="fa fa-bars"></i></a>
+            <!-- <a href="index.html" class="w3-bar-item w3-button w3-padding-large"><img src="img/icon-dark-gold.png" class="homeLogo"></a> -->
             <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
             <a href="booking.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Booking</a>
             <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Proposal</a>
+            <a href="signin.html" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small">Sign In</a>
         </div>
-    </div>
+    </nav>
 
     <!-- Navbar on small screens -->
     <div id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
         <a href="booking.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Booking</a>
         <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Proposal</a>
+        <a href="signin.html" class="w3-bar-item w3-button w3-padding-large">Sign In</a>
     </div>
 
     <!-- Image -->
