--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Navbar -->
-    <div class="w3-top">
+    <nav class="w3-top">
         <div class="w3-bar w3-black w3-card">
             <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
                 href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
@@ -25,13 +25,15 @@
             <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
             <a href="booking.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Booking</a>
             <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Proposal</a>
+            <a href="signin.html" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small">Sign In</a>
         </div>
-    </div>
+    </nav>
 
     <!-- Navbar on small screens -->
     <div id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
         <a href="booking.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Booking</a>
         <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Proposal</a>
+        <a href="signin.html" class="w3-bar-item w3-button w3-padding-large">Sign In</a>
     </div>
 
     <!-- Page content -->
@@ -44,8 +46,9 @@
                 <h1 class="w3-jumbo w3-text-white w3-wide w3-margin-bottom">Minidoka Day of Rememberance</h1>
                 <!-- <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off"><a
                             href="">LEARN MORE</a></button></h6> -->
-                <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-margin-top w3-hover-opacity-off"><a
-                            href="#upcomingPerformances">MORE UPCOMING EVENTS</a></button></h6>
+                <h6><a href="#upcomingPerformances"><button
+                            class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-margin-top w3-hover-opacity-off">MORE
+                            UPCOMING EVENTS</button></a></h6>
             </div>
         </div>
 
@@ -55,10 +58,12 @@
             <p class="w3-justify">
                 Taiko Kai was founded in 2013 by the Matsudaira sisters, three UW students who wanted
                 to share Japanese culture with UW and the greater Seattle community. Since then, we have
-                performed at various events on and off campus such as the FIUTS CulturalFest, Redmond Lights, and Sakura-Con. 
+                performed at various events on and off campus such as the FIUTS CulturalFest, Redmond Lights, and
+                Sakura-Con.
             </p>
 
-            <p class="w3-justify"> Our club focuses on its members, helping them develop personal and team-based performance skills. Our
+            <p class="w3-justify"> Our club focuses on its members, helping them develop personal and team-based
+                performance skills. Our
                 members learn about how to effectively move their bodies and perform for an audience. Our club also
                 builds connections between its members and the American Japanese community, working with other Taiko
                 groups and Japanese events.
@@ -114,8 +119,10 @@
             <div class="w3-row w3-center  w3-padding-32">
                 <div class="w3-col w3-large w3-margin-bottom">
                     <i class="fa fa-map-marker" style="width:30px"></i>Seattle, WA 98105 United States<br>
-                    <i class="fa fa-phone" style="width:30px"></i> Phone: 425-879-6802<br>
-                    <i class="fa fa-envelope" style="width:30px"> </i> Email: uwtaiko@gmail.com<br>
+                    <i class="fa fa-phone" style="width:30px"></i><a href="tel:425-879-6802">Phone: 425-879-6802</a>
+                    <br>
+                    <i class="fa fa-envelope" style="width:30px"> </i> <a href="mailto:uwtaiko@gmail.com">Email:
+                        uwtaiko@gmail.com</a><br>
                 </div>
             </div>
         </div>
