--- a/signin.html
+++ b/signin.html
@@ -46,26 +46,18 @@
 
     <!-- Page Content -->
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
-        <h2 class="w3-wide">Book a Performance</h2>
-        <p class="w3-justify w3-center">
-            If you would like us to perform for your event, please fill out this form!
-        </p>
-        <!-- Booking Form -->
-        <section class="booking-form">
-            <form action="after_booking.html">
-                <label for="name" class="w3-left">Name/Organization</label>
-                <input type="text" id="name" name="name" placeholder="Name">
-                <label for="event" class="w3-left">Name of Event</label>
-                <input type="text" id="eventName" name="eventName" placeholder="Event Name">
-                <label for="email" class="w3-left">Email</label>
-                <input type="email" id="email" name="email" placeholder="Email">
-                <label for="date" class="w3-left">Date Of Performance</label>
-                <input type="date" id="date" name="date" placeholder="Event Date">
-                <label for="message" class="w3-left">Additional Message</label>
-                <textarea id="message" name="message" placeholder="Message"></textarea>
-                <input type="submit" value="Submit">
-            </form>
-        </section>
+        <h3 class="w3-wide">Sign In</h2>
+            <!-- Sign in Form -->
+            <section class="signin-form">
+                <!-- <form action="after_booking.html"> -->
+                    <label for="uname" class="w3-left"><b>Username</b></label>
+                    <input class="w3-round-large" type="text" placeholder="Enter Username" name="uname" size="10"
+                        required>
+                    <label for="psw" class="w3-left"><b>Password</b></label>
+                    <input class="w3-round-large" type="password" placeholder="Enter Password" name="psw" required>
+                    <button class="w3-button w3-black w3-margin-bottom" type="submit">Login</button>
+                </form>
+            </section>
     </div>
 
 
