--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
     <!-- Navbar -->
     <nav class="w3-top">
         <div class="w3-bar w3-black w3-card">
-            <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
+            <a class="navLink w3-hide-medium w3-hide-large w3-right"
                 href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
                     class="fa fa-bars"></i></a>
-            <!-- <a href="index.html" class="w3-bar-item w3-button w3-padding-large"><img src="img/icon-dark-gold.png" class="homeLogo"></a> -->
-            <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
-            <a href="booking.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Booking</a>
-            <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Proposal</a>
-            <a href="signin.html" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small">Sign In</a>
+            <a href="index.html" class="navLink" ><img src="img/logo-new.png" class="homeLogo"></a>
+            <!--<a href="index.html" class="navLink">HOME</a>-->
+            <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
+            <a href="proposal.html" class="navLink w3-hide-small">PROPOSAL</a>
+            <a href="signin.html" class="navLink signIn w3-hide-small">SIGN IN</a>
         </div>
     </nav>
 
     <!-- Navbar on small screens -->
-    <div id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-        <a href="booking.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Booking</a>
-        <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Proposal</a>
-        <a href="signin.html" class="w3-bar-item w3-button w3-padding-large">Sign In</a>
-    </div>
+    <nav class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
+        <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
+        <a href="signin.html" class="navLink">SIGN IN</a>
+    </nav>
 
     <!-- Page content -->
     <div class="w3-content" style="max-width:2000px;margin-top:46px">
@@ -54,15 +54,15 @@
 
         <!-- Intro -->
         <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
-            <h2 class="w3-wide">WELCOME TO UW TAIKO KAI!</h2>
-            <p class="w3-justify">
+            <h2>WELCOME TO UW TAIKO KAI!</h2>
+            <p class="justify">
                 Taiko Kai was founded in 2013 by the Matsudaira sisters, three UW students who wanted
-                to share Japanese culture with UW and the greater Seattle community. Since then, we have
-                performed at various events on and off campus such as the FIUTS CulturalFest, Redmond Lights, and
+                to share Japanese culture with UW and the greater Seattle community. Since then, Taiko Kai has
+                performed at various on and off campus events, such as the FIUTS CulturalFest, Redmond Lights, and
                 Sakura-Con.
             </p>
 
-            <p class="w3-justify"> Our club focuses on its members, helping them develop personal and team-based
+            <p class="justify"> Our club focuses on its members, helping them develop personal and team-based
                 performance skills. Our
                 members learn about how to effectively move their bodies and perform for an audience. Our club also
                 builds connections between its members and the American Japanese community, working with other Taiko
@@ -73,7 +73,7 @@
         <!-- Upcoming performances -->
         <div class="w3-black" id="upcomingPerformances">
             <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-                <h2 class="w3-wide w3-center">UPCOMING PERFORMANCES</h2>
+                <h2 class="w3-center">UPCOMING PERFORMANCES</h2>
 
                 <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
                     <div class="w3-margin-bottom">
@@ -83,7 +83,7 @@
                             <p><b>NSU Day Of Rememberance</b></p>
                             <p>UW Intellectual House</p>
                             <p class="w3-opacity">Feburary 20 6-8 PM</p>
-                            <button class="w3-button w3-black w3-margin-bottom">Learn More</button>
+                            <button class="learnMore">Learn More</button>
                         </div>
                     </div>
                     <div class="w3-margin-bottom">
@@ -93,7 +93,7 @@
                             <p><b>TOSA Carnival</b></p>
                             <p>UW HUB Ballroom</p>
                             <p class="w3-opacity">Feburary 22nd 3-8 PM</p>
-                            <button class="w3-button w3-black w3-margin-bottom">Learn More</button>
+                            <button class="learnMore">Learn More</button>
                         </div>
                     </div>
                     <div class="w3-margin-bottom">
@@ -102,7 +102,7 @@
                             <p><b>Sakura-Con</b></p>
                             <p>Washington State Convention Center</p>
                             <p class="w3-opacity">April 11th 10-11 AM</p>
-                            <button class="w3-button w3-black w3-margin-bottom">Learn More</button>
+                            <button class="learnMore">Learn More</button>
                         </div>
                     </div>
                 </div>
