--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <p><b>NSU Day Of Rememberance</b></p>
                             <p>UW Intellectual House</p>
                             <p class="w3-opacity">Feburary 20 6-8 PM</p>
-                            <button class="learnMore">Learn More</button>
+                            <button class="basicButton">Learn More</button>
                         </div>
                     </div>
                     <div class="w3-margin-bottom">
@@ -93,7 +93,7 @@
                             <p><b>TOSA Carnival</b></p>
                             <p>UW HUB Ballroom</p>
                             <p class="w3-opacity">Feburary 22nd 3-8 PM</p>
-                            <button class="learnMore">Learn More</button>
+                            <button class="basicButton">Learn More</button>
                         </div>
                     </div>
                     <div class="w3-margin-bottom">
@@ -102,7 +102,7 @@
                             <p><b>Sakura-Con</b></p>
                             <p>Washington State Convention Center</p>
                             <p class="w3-opacity">April 11th 10-11 AM</p>
-                            <button class="learnMore">Learn More</button>
+                            <button class="basicButton">Learn More</button>
                         </div>
                     </div>
                 </div>
