--- a/signin.html
+++ b/signin.html
@@ -52,7 +52,7 @@
                 <input class="w3-round-large" type="text" placeholder="Enter Username" name="uname" size="10" required>
                 <label for="psw" class="w3-left"><b>Password</b></label>
                 <input class="w3-round-large" type="password" placeholder="Enter Password" name="psw" required>
-                <button class="w3-button w3-black w3-margin-bottom" type="submit">Login</button>
+                <a href="adminhome.html"><button class="basicButton" type="submit">Login</button></a>
                 </form>
             </section>
     </div>
