added booking admin page

--- a/adminbooking.html
+++ b/adminbooking.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="js/index.js"></script>
-    <title>Admin Home</title>
+    <title>Home</title>
 </head>
 
 <body>
@@ -35,24 +35,58 @@
         <a href="signin.html" class="navLink">SIGN OUT</a>
     </nav>
 
-    <div class="w3-black">
-        <div class="contentBox" style="max-width:800px; padding-top:128px;">
-            <h2 style="color: white;">WELCOME BACK, DOROTHY!</h2>
-        </div>
-        <div class="contentBox" style="max-width:800px;">
-            <a href="adminbooking.html">
-                <div class="adminCategories">
-                    <h3>Manage Events</h3>
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px; margin-top:46px">
+        <h2 class="w3-center">PERFORMANCE REQUESTS</h2>
+        <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-margin-bottom">
+                <div class="w3-container w3-center" style="border: rgb(189, 189, 189) solid 1px;">
+                    <p><b>NSU Day Of Rememberance</b></p>
+                    <p>UW Intellectual House</p>
+                    <p class="w3-opacity">Feburary 20 6-8 PM</p>
+                    <button class="basicButton">Accept</button>
+                    <button class="basicButton">Remove</button>
                 </div>
-            </a>
-            <div class="adminCategories">
-                <h3>Member Info</h3>
             </div>
-            <div class="adminCategories">
-                <h3>Song Database</h3>
+            <div class="w3-margin-bottom">
+                <div class="w3-container w3-center" style="border: rgb(189, 189, 189) solid 1px;">
+                    <p><b>TOSA Carnival</b></p>
+                    <p>UW HUB Ballroom</p>
+                    <p class="w3-opacity">Feburary 22nd 3-8 PM</p>
+                    <button class="basicButton">Accept</button>
+                    <button class="basicButton">Remove</button>
+                </div>
             </div>
-            <div class="adminCategories">
-                <h3>TBD</h3>
+        </div>
+    </div>
+
+    <div class="w3-black">
+        <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+            <h2 class="w3-center">SCHEDULED PERFORMANCES</h2>
+            <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+                <div class="w3-margin-bottom">
+                    <div class="w3-container w3-white w3-center">
+                        <p><b>NSU Day Of Rememberance</b></p>
+                        <p>UW Intellectual House</p>
+                        <p class="w3-opacity">Feburary 20 6-8 PM</p>
+                        <button class="basicButton">Remove</button>
+                    </div>
+                </div>
+                <div class="w3-margin-bottom">
+                    <div class="w3-container w3-white w3-center">
+                        <p><b>TOSA Carnival</b></p>
+                        <p>UW HUB Ballroom</p>
+                        <p class="w3-opacity">Feburary 22nd 3-8 PM</p>
+                        <button class="basicButton">Remove</button>
+                    </div>
+                </div>
+                <div class="w3-margin-bottom">
+                    <div class="w3-container w3-white w3-center">
+                        <p><b>Sakura-Con</b></p>
+                        <p>Washington State Convention Center</p>
+                        <p class="w3-opacity">April 11th 10-11 AM</p>
+                        <button class="basicButton">Remove</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
