--- a/signin.html
+++ b/signin.html
@@ -35,15 +35,8 @@
         <a href="signin.html" class="navLink">SIGN IN</a>
     </nav>
 
-    <!-- Image -->
-    <div class="w3-content" style="max-width:2000px;margin-top:46px">
-        <div class="w3-display-container w3-center">
-            <img src="img/cover-photo.png" style="width: 100%;" alt="Minidoka 2017">
-        </div>
-    </div>
-
     <!-- Page Content -->
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px; margin-top:64px;" id="intro">
         <h3 class="w3-wide">Sign In</h2>
             <!-- Sign in Form -->
             <section class="signin-form">
