--- a/after_booking.html
+++ b/after_booking.html
@@ -36,16 +36,9 @@
         <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
         <a href="signin.html" class="navLink">SIGN IN</a>
     </nav>
-
-    <!-- Image -->
-    <div class="w3-content" style="max-width:2000px;margin-top:46px">
-        <div class="w3-display-container w3-center">
-            <img src="img/cover-photo.png" style="width: 100%;" alt="Minidoka 2017">
-        </div>
-    </div>
-
+    
     <!-- Page Content -->
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px; margin-top:46px" id="intro">
         <h2 class="w3-wide">Thank you for your booking!</h2>
         <p class="w3-justify w3-center">
             We greatly appreciate your interest in letting us to perform for you. We will get back to you soon.
