Added some filler text

--- a/adminbooking.html
+++ b/adminbooking.html
@@ -40,18 +40,18 @@
         <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
             <div class="w3-margin-bottom">
                 <div class="w3-container w3-center" style="border: rgb(189, 189, 189) solid 1px;">
-                    <p><b>NSU Day Of Rememberance</b></p>
+                    <p><b>Hiking Club WTA Volunteering</b></p>
                     <p>UW Intellectual House</p>
-                    <p class="w3-opacity">Feburary 20 6-8 PM</p>
+                    <p class="w3-opacity">May 20 6-8 PM</p>
                     <button class="basicButton">Accept</button>
                     <button class="basicButton">Remove</button>
                 </div>
             </div>
             <div class="w3-margin-bottom">
                 <div class="w3-container w3-center" style="border: rgb(189, 189, 189) solid 1px;">
-                    <p><b>TOSA Carnival</b></p>
-                    <p>UW HUB Ballroom</p>
-                    <p class="w3-opacity">Feburary 22nd 3-8 PM</p>
+                    <p><b>IUGA Game Night</b></p>
+                    <p>MGH 066</p>
+                    <p class="w3-opacity">Apirl 22nd 6-8 PM</p>
                     <button class="basicButton">Accept</button>
                     <button class="basicButton">Remove</button>
                 </div>
