--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                 <h2 class="w3-wide">Event Info</h2>
               </header>
               <div class="w3-container">
+                  <p>This shall be a detailed description of what the event is. As for now it is just filler text.</p>
                 <button class="basicButton w3-block w3-padding-16 w3-section w3-right"> ADD TO CALENDAR </button>
                 <button class="basicButton w3-section" onclick="document.getElementById('eventModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
               </div>
