small edits to content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
 
     <!-- Navbar on small screens -->
-    <nav class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:75px">
         <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
         <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
         <a href="signin.html" class="navLink">SIGN IN</a>
@@ -123,7 +123,6 @@
               </div>
             </div>
         </div>
-        <!-- End Page Content -->
     </div>
 
     <!-- Footer -->
