--- a/adminhome.html
+++ b/adminhome.html
@@ -17,22 +17,23 @@
 <body>
     <!-- Navbar -->
     <nav class="w3-top">
-        <div class="w3-bar w3-black w3-card">
-            <a class="navLink w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="navToggle()"
-                title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="index.html" class="navLink"><img src="img/logo-new.png" class="homeLogo"></a>
+        <div class="w3-bar w3-card transparentNav">
+            <a class="navLink w3-hide-medium w3-hide-large w3-right"
+                href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
+                    class="fa fa-bars"></i></a>
+            <a href="index.html" class="navLink" ><img src="img/logo-new.png" class="homeLogo"></a>
             <!--<a href="index.html" class="navLink">HOME</a>-->
             <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
             <a href="proposal.html" class="navLink w3-hide-small">PROPOSAL</a>
-            <a href="signin.html" class="navLink signIn w3-hide-small">SIGN OUT</a>
+            <a href="signin.html" class="navLink signIn w3-hide-small">SIGN IN</a>
         </div>
     </nav>
 
     <!-- Navbar on small screens -->
-    <nav class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:75px">
         <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
         <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
-        <a href="signin.html" class="navLink">SIGN OUT</a>
+        <a href="signin.html" class="navLink">SIGN IN</a>
     </nav>
 
     <div class="w3-black">
@@ -45,15 +46,21 @@
                     <h3>Manage Events</h3>
                 </div>
             </a>
-            <div class="adminCategories">
-                <h3>Member Info</h3>
-            </div>
-            <div class="adminCategories">
-                <h3>Song Database</h3>
-            </div>
-            <div class="adminCategories">
-                <h3>TBD</h3>
-            </div>
+            <a href="memberdatabase.html">
+                <div class="adminCategories">
+                    <h3>Member Info</h3>
+                </div>
+            </a>
+            <a href="songdatabase.html">
+                <div class="adminCategories">
+                    <h3>Song Database</h3>
+                </div>
+            </a>
+            <a href="taikoresources.html">
+                <div class="adminCategories">
+                    <h3>Taiko Resources</h3>
+                </div>
+            </a>
         </div>
     </div>
 
