--- a/after_booking.html
+++ b/after_booking.html
@@ -18,7 +18,7 @@
 
     <!-- Navbar -->
     <nav class="w3-top">
-        <div class="w3-bar w3-black w3-card">
+        <div class="w3-bar w3-card transparentNav">
             <a class="navLink w3-hide-medium w3-hide-large w3-right"
                 href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
                     class="fa fa-bars"></i></a>
@@ -31,12 +31,12 @@
     </nav>
 
     <!-- Navbar on small screens -->
-    <nav class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:75px">
         <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
         <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
         <a href="signin.html" class="navLink">SIGN IN</a>
     </nav>
-    
+
     <!-- Page Content -->
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px; margin-top:46px" id="intro">
         <h2 class="w3-wide">Thank you for your booking!</h2>
