--- a/signin.html
+++ b/signin.html
@@ -17,10 +17,11 @@
 <body>
     <!-- Navbar -->
     <nav class="w3-top">
-        <div class="w3-bar w3-black w3-card">
-            <a class="navLink w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="navToggle()"
-                title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="index.html" class="navLink"><img src="img/logo-new.png" class="homeLogo"></a>
+        <div class="w3-bar w3-card transparentNav">
+            <a class="navLink w3-hide-medium w3-hide-large w3-right"
+                href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
+                    class="fa fa-bars"></i></a>
+            <a href="index.html" class="navLink" ><img src="img/logo-new.png" class="homeLogo"></a>
             <!--<a href="index.html" class="navLink">HOME</a>-->
             <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
             <a href="proposal.html" class="navLink w3-hide-small">PROPOSAL</a>
@@ -29,7 +30,7 @@
     </nav>
 
     <!-- Navbar on small screens -->
-    <nav class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:75px">
         <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
         <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
         <a href="signin.html" class="navLink">SIGN IN</a>
