--- a/taikoresources.html
+++ b/taikoresources.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="js/index.js"></script>
-    <title>Performance Booking</title>
+    <title>Admin Home</title>
 </head>
 
 <body>
@@ -37,46 +36,7 @@
         <a href="signin.html" class="navLink">SIGN IN</a>
     </nav>
 
-    <!-- Image -->
-    <div class="w3-content" style="max-width:2000px;">
-        <div class="w3-display-container w3-center">
-            <img src="img/cover-photo.png" class="banner" alt="Minidoka 2017">
-        </div>
-    </div>
-
-    <!-- Page Content -->
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
-        <h2 class="w3-wide">Book a Performance</h2>
-        <p class="w3-justify w3-center">
-            If you would like us to perform for your event, please fill out this form! The honorary price for a performance is $200,
-            through this may change depending on the location, length, and scale of the performance.
-        </p>
-        <!-- Booking Form -->
-        <section class="booking-form">
-            <form action="after_booking.html">
-                <label for="name" class="w3-left">Name/Organization</label>
-                <input type="text" id="name" name="name" placeholder="Name">
-                <label for="event" class="w3-left">Name of Event</label>
-                <input type="text" id="eventName" name="eventName" placeholder="Event Name">
-                <label for="email" class="w3-left">Email</label>
-                <input type="email" id="email" name="email" placeholder="Email">
-                <label for="date" class="w3-left">Date Of Performance</label>
-                <input type="date" id="date" name="date" placeholder="Event Date">
-                <label for="event" class="w3-left">Location Of Performance</label>
-                <input type="text" id="eventName" name="eventLocation" placeholder="Address">
-                <label for="event" class="w3-left">Price Point</label>
-                <input type="number" min="0.01" step="0.01" id="eventPrice" name="pricePoint" placeholder="USD">
-                <label for="message" class="w3-left">Additional Message</label>
-                <textarea id="message" name="message" placeholder="Message"></textarea>
-                <form action="?" method="POST">
-                    <div class="g-recaptcha" data-sitekey="6LdGMNgUAAAAAJuT9-b-cgb5JNm14cw-kNL7lZs8"></div>
-                    <br />
-                    <input type="submit" value="Submit">
-                </form>
-            </form>
-        </section>
-    </div>
-
+    <!-- Content Goes Here -->
 
     <!-- Footer -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
@@ -86,8 +46,10 @@
             <div class="w3-row w3-center  w3-padding-32">
                 <div class="w3-col w3-large w3-margin-bottom">
                     <i class="fa fa-map-marker" style="width:30px"></i>Seattle, WA 98105 United States<br>
-                    <i class="fa fa-phone" style="width:30px"></i> Phone: 425-879-6802<br>
-                    <i class="fa fa-envelope" style="width:30px"> </i> Email: uwtaiko@gmail.com<br>
+                    <i class="fa fa-phone" style="width:30px"></i><a href="tel:425-879-6802">Phone: 425-879-6802</a>
+                    <br>
+                    <i class="fa fa-envelope" style="width:30px"> </i> <a href="mailto:uwtaiko@gmail.com">Email:
+                        uwtaiko@gmail.com</a><br>
                 </div>
             </div>
         </div>
@@ -97,8 +59,8 @@
         <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/taikokai/"></a>
         <a class="fa fa-youtube w3-hover-opacity" href="https://www.youtube.com/channel/UCfNit59pCLMfxQzRrVRrXTQ"></a>
         <p class="byline">&copy; Dorothy Lu & Aaron Zhao</p>
-        </p>
     </footer>
+
 </body>
 
 </html>
